# tunebar

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  media.rs  tray.rs
src/scripts/: ad-blocker.js  error-handler.js  media-bridge.js
