[package]
name = "tunebar"
version = "0.1.0"
description = "TuneBar - macOS menu bar YouTube Music player"
authors = ["you"]
edition = "2021"

[lib]
name = "tunebar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
souvlaki = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

